# rst02-users-crud-auth

./: .env.example  .gitignore  Cargo.toml  db_fresh_setup.sh
migrations/: 0001_users.down.sql  0001_users.up.sql
src/: lib.rs  main.rs
src/users/: mod.rs  model.rs  routes.rs
src/users/handlers/: delete_single.rs  get_all.rs  get_single.rs  login.rs  mod.rs  register.rs  update_single.rs
